Fix overflow bug

--- a/components/box/box.css
+++ b/components/box/box.css
@@ -31,6 +31,7 @@
 }
 
 .box-i {
+  display: flex;
   padding: 8px 16px;
   font-size: 14/16 * 1rem;
   & > :first-child {
