--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -665,6 +665,9 @@ th > :last-child, td > :last-child {
 }
 
 .box-i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   padding: 8px 16px;
   font-size: 14/16 * 16px;
   font-size: 14/16 * 1rem
